--- a/app/src/main/res/layout/fragment_shoes_list.xml
+++ b/app/src/main/res/layout/fragment_shoes_list.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ShoesListFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/add_shoes_fab"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_4x"
-            android:layout_gravity="bottom|end"
-            android:src="@drawable/ic_plus_24"
-            app:fabSize="auto"
-            android:contentDescription="@string/add_shoes" />
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/add_shoes_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/space_4x"
+                android:layout_gravity="bottom|end"
+                android:src="@drawable/ic_plus_24"
+                app:fabSize="auto"
+                android:contentDescription="@string/add_shoes" />
 
+        </LinearLayout>
 
+    </ScrollView>
 
-</ScrollView>
+</layout>
