--- a/app/src/main/res/layout/fragment_shoe_details.xml
+++ b/app/src/main/res/layout/fragment_shoe_details.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ShoeDetailsFragment">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_vertical_guideline"
@@ -141,3 +144,4 @@
         app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
