--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
             android:layout_height="match_parent">
 
                 <androidx.fragment.app.FragmentContainerView
-                    android:id="@+id/navHostFragmentContainer"
+                    android:id="@+id/fragmentContainer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:name="androidx.navigation.fragment.NavHostFragment"
