--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.bignerdranch.android.shoestore.LoginFragment"
-        android:label="fragment_login"
+        android:label="Login"
         tools:layout="@layout/fragment_login" >
         <action
             android:id="@+id/action_loginFragment_to_welcomeFragment"
@@ -16,7 +16,7 @@
     <fragment
         android:id="@+id/welcomeFragment"
         android:name="com.bignerdranch.android.shoestore.WelcomeFragment"
-        android:label="fragment_welcome"
+        android:label="Welcome"
         tools:layout="@layout/fragment_welcome" >
         <action
             android:id="@+id/action_welcomeFragment_to_instructionsFragment"
@@ -25,7 +25,7 @@
     <fragment
         android:id="@+id/instructionsFragment"
         android:name="com.bignerdranch.android.shoestore.InstructionsFragment"
-        android:label="fragment_instructions"
+        android:label="Instructions"
         tools:layout="@layout/fragment_instructions" >
         <action
             android:id="@+id/action_instructionsFragment_to_shoesListFragment"
@@ -34,7 +34,7 @@
     <fragment
         android:id="@+id/shoesListFragment"
         android:name="com.bignerdranch.android.shoestore.ShoesListFragment"
-        android:label="fragment_shoes_list"
+        android:label="Shoes listing"
         tools:layout="@layout/fragment_shoes_list" >
         <action
             android:id="@+id/action_shoesListFragment_to_shoeDetailsFragment"
@@ -46,7 +46,7 @@
     <fragment
         android:id="@+id/shoeDetailsFragment"
         android:name="com.bignerdranch.android.shoestore.ShoeDetailsFragment"
-        android:label="fragment_shoe_details"
+        android:label="Shoe details"
         tools:layout="@layout/fragment_shoe_details" >
         <action
             android:id="@+id/action_shoeDetailsFragment_to_shoesListFragment"
