--- a/app/src/main/res/layout/fragment_instructions.xml
+++ b/app/src/main/res/layout/fragment_instructions.xml
@@ -6,60 +6,47 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/left_vertical_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/space_4x" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/right_vertical_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/space_4x" />
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/space_4x"
+        android:layout_marginEnd="@dimen/space_4x">
 
         <TextView
-            android:id="@+id/title_text_view"
+            android:id="@+id/instructionTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="@dimen/space_4x"
             android:gravity="center"
-            android:text="@string/this_is_exactly_the_instruction_page"
-            android:textSize="@dimen/text_size_headline"
+            android:text="@string/instruction_title_text"
+            android:textSize="@dimen/text_size_title"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/description_text_view"
-            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline" />
+            app:layout_constraintBottom_toTopOf="@id/instructionBody"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/description_text_view"
+            android:id="@+id/instructionBody"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="@dimen/space_4x"
+            android:layout_marginTop="@dimen/space_5x"
             android:gravity="center"
-            android:text="@string/there_should_be_instructions"
-            android:textSize="@dimen/text_size_subtitle"
+            android:text="@string/instruction_body_text"
+            android:textSize="@dimen/text_size_body"
             app:layout_constraintVertical_chainStyle="packed"
-            app:layout_constraintTop_toBottomOf="@id/title_text_view"
-            app:layout_constraintBottom_toTopOf="@id/go_shoes_list_button"
-            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline" />
+            app:layout_constraintTop_toBottomOf="@id/instructionTitle"
+            app:layout_constraintBottom_toTopOf="@id/buttonShoesList"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
-            android:id="@+id/go_shoes_list_button"
+            android:id="@+id/buttonShoesList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_6x"
-            android:text="@string/shoes_list"
-            app:layout_constraintTop_toBottomOf="@id/description_text_view"
+            android:text="@string/shoes_list_action"
+            app:layout_constraintTop_toBottomOf="@id/instructionBody"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
