--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,98 +7,88 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/left_vertical_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/space_4x" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/right_vertical_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/space_4x" />
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/space_4x"
+        android:layout_marginEnd="@dimen/space_4x">
 
         <TextView
-            android:id="@+id/email_address_text"
+            android:id="@+id/emailSubtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/email_address"
             android:padding="@dimen/space_2x"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.33"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/enter_email_address_edit_text"
-            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline" />
-
+            app:layout_constraintBottom_toTopOf="@id/layoutLogin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <EditText
-            android:id="@+id/enter_email_address_edit_text"
+            android:id="@+id/layoutLogin"
             android:layout_width="0dp"
             android:layout_height="@dimen/space_7x"
             android:layout_marginTop="@dimen/space_0_5x"
             android:autofillHints="emailAddress"
-            android:hint="@string/enter_email_address"
+            android:hint="@string/enter_email_hint"
             android:inputType="textEmailAddress"
             android:textColorHint="#757575"
-            app:layout_constraintBottom_toTopOf="@id/password_text"
-            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline"
-            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-            app:layout_constraintTop_toBottomOf="@id/email_address_text" />
+            app:layout_constraintBottom_toTopOf="@id/passwordSubtitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/emailSubtitle" />
 
         <TextView
-            android:id="@+id/password_text"
+            android:id="@+id/passwordSubtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_4x"
+            android:layout_marginTop="@dimen/space_5x"
             android:text="@string/password"
             android:padding="@dimen/space_2x"
-            app:layout_constraintTop_toBottomOf="@id/enter_email_address_edit_text"
-            app:layout_constraintBottom_toTopOf="@id/password_edit_text"
-            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline" />
+            app:layout_constraintTop_toBottomOf="@id/layoutLogin"
+            app:layout_constraintBottom_toTopOf="@id/layoutPassword"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
         <EditText
-            android:id="@+id/password_edit_text"
+            android:id="@+id/layoutPassword"
             android:layout_width="0dp"
             android:layout_height="@dimen/space_7x"
             android:layout_marginTop="@dimen/space_0_5x"
             android:autofillHints="password"
-            android:hint="@string/enter_password"
+            android:hint="@string/enter_password_hint"
             android:inputType="textPassword"
             android:minHeight="48dp"
             android:textColorHint="#757575"
-            app:layout_constraintBottom_toTopOf="@id/create_new_login_button"
-            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline"
-            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-            app:layout_constraintTop_toBottomOf="@id/password_text" />
+            app:layout_constraintBottom_toTopOf="@id/buttonSignUp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/passwordSubtitle" />
 
         <Button
-            android:id="@+id/create_new_login_button"
+            android:id="@+id/buttonSignUp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_4x"
-            android:layout_marginEnd="@dimen/space_2x"
-            android:text="@string/create_new_login"
-            app:layout_constraintTop_toBottomOf="@id/password_edit_text"
-            app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
-            app:layout_constraintEnd_toStartOf="@id/login_button"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginTop="@dimen/space_6x"
+            android:layout_marginEnd="@dimen/space_4x"
+            android:text="@string/sign_up_action"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintTop_toBottomOf="@id/layoutPassword"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/buttonSignIn"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <Button
-            android:id="@+id/login_button"
+            android:id="@+id/buttonSignIn"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="@string/login"
-            app:layout_constraintTop_toTopOf="@id/create_new_login_button"
-            app:layout_constraintBottom_toBottomOf="@id/create_new_login_button"
-            app:layout_constraintStart_toEndOf="@id/create_new_login_button"
-            app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline" />
+            android:text="@string/sign_in_action"
+            app:layout_constraintTop_toTopOf="@id/buttonSignUp"
+            app:layout_constraintBottom_toBottomOf="@id/buttonSignUp"
+            app:layout_constraintStart_toEndOf="@id/buttonSignUp"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
