--- a/app/src/main/res/layout/fragment_shoes_list.xml
+++ b/app/src/main/res/layout/fragment_shoes_list.xml
@@ -23,20 +23,17 @@
         </ScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_btn"
+            android:id="@+id/buttonFab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/space_4x"
             android:layout_gravity="bottom|end"
             android:src="@drawable/ic_plus_24"
-
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:fabSize="auto"
-            android:contentDescription="@string/add_shoes" />
+            android:contentDescription="@string/add_shoe_action" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 </layout>
